# gst-plugins-base

./: README.md  configure.ac  gst-plugins-base-1.14.4-make43.patch  meson.build  meson_options.txt
ext/alsa/: gstalsasink.c
ext/gl/: gstglimagesink.c
ext/ogg/: gstoggdemux.c
ext/theora/: gsttheoraenc.c
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/allocators/: Makefile.am
gst-libs/gst/app/: Makefile.am  gstappsink.c  gstappsrc.c
gst-libs/gst/audio/: Makefile.am  gstaudioaggregator.c  gstaudiobasesink.c  gstaudiobasesrc.c  gstaudiodecoder.c  gstaudiodecoder.h  gstaudioencoder.c
gst-libs/gst/gl/: Makefile.am  gstglbasefilter.c  gstglbuffer.c  gstglcolorconvert.c  gstglcontext.c  gstglcontext.h  gstglmemorypbo.c  gstglviewconvert.c  gstglwindow.c
gst-libs/gst/pbutils/: Makefile.am  descriptions.c  gstaudiovisualizer.c
gst-libs/gst/riff/: Makefile.am  riff-ids.h  riff-media.c  riff-read.c
gst-libs/gst/rtp/: Makefile.am  gstrtpbasedepayload.c  gstrtppayloads.c
gst-libs/gst/rtsp/: Makefile.am  gstrtspconnection.c  gstrtspconnection.h  gstrtsptransport.c
gst-libs/gst/sdp/: Makefile.am
gst-libs/gst/subtitle/: Makefile.am  gstsubtitlemeta.c  gstsubtitlemeta.h  meson.build  subtitle-prelude.h  subtitle.h
gst-libs/gst/tag/: Makefile.am  gsttagdemux.c  id3v2frames.c
gst-libs/gst/video/: Makefile.am  convertframe.c  gstvideodecoder.c  gstvideodecoder.h  gstvideoencoder.c  gstvideopool.c
gst/audioconvert/: gstaudioconvert.c
gst/audioresample/: gstaudioresample.c
gst/playback/: Makefile.am  gstdecodebin2.c  gstdecodebin3-parse.c  gstdecodebin3-tv.c  gstdecodebin3.c  gstparsebin-tv.c  gstparsebin.c  gstplay-enum.c  gstplay-enum.h  gstplaybin2.c  gstplaybin3-tv.c  gstplaybin3.c  gstplaysink.c  gstplaysink.h  gstplaysinkconvertbin.c  gstrawcaps.h  gststreamsynchronizer.c  gsturidecodebin.c  gsturidecodebin3.c  gsturisourcebin-tv.c  gsturisourcebin.c  meson.build
gst/subparse/: gstssaparse.c  gstsubparse.c  gstsubparse.h
gst/typefind/: gsttypefindfunctions.c
m4/: gst-gl.m4
pkgconfig/: Makefile.am  gstreamer-subtitle-uninstalled.pc.in  gstreamer-subtitle.pc.in
tests/check/: Makefile.am
tests/check/elements/: appsrc.c  videoscale.c
(+10 files in other folders)
